# rai

api/: .gitignore  README.md  pyproject.toml
api/template_matching_api/: db.py  db_model.py  file_storage.py
api/template_matching_api/api/: api.py  dependencies.py
api/template_matching_api/api/endpoints/: document_template.py  template_matching_job.py  workspace.py
api/template_matching_api/api_models/: data_specification.py  sample.py  template_matching_job.py  workspace.py
api/template_matching_api/jobs/: template_matching_job.py
api/template_matching_api/tests/: conftest.py  storage.py
api/template_matching_api/tests/api/endpoints/: test_template_matching_job.py  test_workspace.py
gui/src/components/navigation/: NavDrawer.vue
gui/src/components/workspace/: WorkspaceForm.vue
gui/src/router/: index.ts
gui/src/views/: WorkspaceList.vue
